Fixed "Settings" Alignment issue
Settings pop-up menu fixed to “Left-Aligned”
Added Grid icon next to “All Items”
Hamburger pulls menu out at mobile size browser

--- a/css/dropit.css
+++ b/css/dropit.css
@@ -164,6 +164,7 @@
  }
  .dropUp .dropUp-open .dropUp-submenu li a {
   color:#34495E;
+  float: left;
   text-decoration: none;
   font-family: "Lato", Helvetica, Arial, sans-serif;
   font-weight:100;
